--- a/netty-codec-sockjs/pom.xml
+++ b/netty-codec-sockjs/pom.xml
@@ -36,10 +36,6 @@
         </license>
     </licenses>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
@@ -80,7 +76,7 @@
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
-            <version>2.6.0</version>
+            <version>${version.org.jmock}</version>
             <scope>test</scope>
         </dependency>
   
@@ -103,6 +99,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>${version.exec-maven-plugin}</version>
                 <configuration>
                     <mainClass>org.jboss.aerogear.io.netty.handler.codec.sockjs.NettySockJsServer</mainClass>
                     <classpathScope>test</classpathScope>
