--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,35 @@
     </scm>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.aerogear.crypto>0.1.2</version.aerogear.crypto>
+        <version.bouncycastle>140</version.bouncycastle>
+        <version.com.h2database>1.3.172</version.com.h2database>
+        <version.commons.http.core>4.2.4</version.commons.http.core>
+        <version.commons.http>4.2.5</version.commons.http>
+        <version.commons.io>2.0.1</version.commons.io>
+        <version.commons.logging>1.1.1</version.commons.logging>
+        <version.commons.pool>1.5.5</version.commons.pool>
+        <version.ektorp>1.4.1</version.ektorp>
+        <version.exec-maven-plugin>1.2</version.exec-maven-plugin>
+        <version.io.vertx>2.0.1-final</version.io.vertx>
         <version.io.netty>5.0.0.Alpha1</version.io.netty>
         <version.jackson>2.3.0</version.jackson>
-        <version.ektorp>1.4.1</version.ektorp>
+        <version.jboss.as>7.1.1.Final</version.jboss.as>
         <version.jedis>2.0.0</version.jedis>
-        <version.aerogear.crypto>0.1.2</version.aerogear.crypto>
-        <version.bountycastle>140</version.bountycastle>
+        <version.junit>4.11</version.junit>
+        <!-- Specific version for common, protocol, server-api modules -->
+        <version.maven-compiler-plugin>2.3.1</version.maven-compiler-plugin>
+        <version.maven-surefire-plugin>2.14</version.maven-surefire-plugin>
+        <version.mysql>5.1.18</version.mysql>
+        <version.org.easytesting>1.4</version.org.easytesting>
+        <version.org.eclipse.m2e>1.0.0</version.org.eclipse.m2e>
+        <version.org.hibernate>4.2.3.Final</version.org.hibernate>
+        <version.org.jboss.modules>1.1.1.GA</version.org.jboss.modules>
+        <version.org.jmock>2.6.0</version.org.jmock>
+        <version.org.mockito>1.9.0</version.org.mockito>
+        <version.org.slf4j>1.7.5</version.org.slf4j>
+        <version.redis.clients>2.0.0</version.redis.clients>
     </properties>
 
     <modules>
@@ -133,7 +156,7 @@
             <dependency>
                 <groupId>bouncycastle</groupId>
                 <artifactId>bcprov-jdk16</artifactId>
-                <version>${version.bountycastle}</version>
+                <version>${version.bouncycastle}</version>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
@@ -148,7 +171,7 @@
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
-                <version>2.0.0</version>
+                <version>${version.redis.clients}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -168,24 +191,29 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.5</version>
+                <version>${version.org.slf4j}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${version.org.slf4j}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <scope>test</scope>
-                <version>4.11</version>
+                <version>${version.junit}</version>
             </dependency>
             <dependency>
                 <groupId>org.easytesting</groupId>
                 <artifactId>fest-assert</artifactId>
-                <version>1.4</version>
+                <version>${version.org.easytesting}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>1.9.0</version>
+                <version>${version.org.mockito}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -195,7 +223,8 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <!-- Inherits version 3.0 from jboss-parent pom.xml -->
+                <!-- <version>3.0</version>  -->
                 <configuration>
                     <compilerVersion>1.6</compilerVersion>
                     <fork>true</fork>
@@ -210,7 +239,8 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <!-- Inherits version 2.9 from org.jboss:jboss-parent:10 pom.xml -->
+                <!-- <version>2.9</version> -->
                 <configuration>
                     <detectOfflineLinks>false</detectOfflineLinks>
                     <breakiterator>true</breakiterator>
@@ -222,7 +252,8 @@
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.7</version>
+                <!-- Inherits version 2.7 from org.jboss:jboss-parent:10 pom.xml -->
+                <!-- <version>2.7</version> -->
                 <configuration>
                     <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
                 </configuration>
@@ -230,6 +261,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <!-- Overrides version 2.3.2 of org.jboss:jboss-parent:10 pom.xml -->
                 <version>2.4</version>
                 <configuration>
                     <pushChanges>false</pushChanges>
@@ -240,7 +272,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.14</version>
+                    <version>${version.maven-surefire-plugin}</version>
                     <configuration>
                         <systemPropertyVariables>
                             <org.jboss.logging.provider>slf4j</org.jboss.logging.provider>
@@ -250,7 +282,7 @@
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
+                    <version>${version.org.eclipse.m2e}</version>
                     <configuration>
                         <lifecycleMappingMetadata>
                             <pluginExecutions>
@@ -321,7 +353,8 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.4</version>
+                        <!-- Inherits version 1.4 from org.jboss:jboss-parent:10 pom.xml -->
+                        <!-- <version>1.4</version> -->
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
