--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -36,17 +36,13 @@
         </license>
     </licenses>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <build>
         <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.1</version>
+                    <version>${version.maven-compiler-plugin}</version>
                     <configuration>
                         <source>1.6</source>
                         <target>1.6</target>
