--- a/server-core/pom.xml
+++ b/server-core/pom.xml
@@ -37,7 +37,6 @@
     </licenses>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <include.redis.tests>none</include.redis.tests>
         <include.couchdb.tests>none</include.couchdb.tests>
     </properties>
@@ -67,7 +66,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
         </dependency>
         
         <dependency>
@@ -115,14 +113,14 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.2.3.Final</version>
+            <version>${version.org.hibernate}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.172</version>
+            <version>${version.com.h2database}</version>
             <scope>test</scope>
         </dependency>
 
@@ -134,7 +132,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>${version.exec-maven-plugin}</version>
                 <configuration>
                     <mainClass>org.jboss.aerogear.simplepush.server.netty.NettyWebSocketServer</mainClass>
                     <arguments>
