--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -37,7 +37,6 @@
     </licenses>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <include.redis.tests>none</include.redis.tests>
         <include.couchdb.tests>none</include.couchdb.tests>
     </properties>
@@ -98,21 +97,20 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.2.3.Final</version>
+            <version>${version.org.hibernate}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.172</version>
+            <version>${version.com.h2database}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
         </dependency>
 
         <dependency>
@@ -141,7 +139,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>${version.exec-maven-plugin}</version>
                 <configuration>
                     <mainClass>org.jboss.aerogear.simplepush.server.netty.standalone.NettySockJSServer</mainClass>
                     <classpathScope>test</classpathScope>
@@ -176,7 +174,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.2</version>
+                        <version>${version.exec-maven-plugin}</version>
                         <configuration>
                             <mainClass>org.jboss.aerogear.simplepush.server.netty.standalone.NettySockJSServer</mainClass>
                             <classpathScope>test</classpathScope>
@@ -198,7 +196,7 @@
                       <plugin>
                           <groupId>org.codehaus.mojo</groupId>
                           <artifactId>exec-maven-plugin</artifactId>
-                          <version>1.2</version>
+                          <version>${version.exec-maven-plugin}</version>
                           <configuration>
                               <mainClass>org.jboss.aerogear.simplepush.server.netty.standalone.NettySockJSServer</mainClass>
                               <classpathScope>test</classpathScope>
