--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -37,10 +37,8 @@
     </licenses>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <module.name>aerogear~simplepush~${project.version}</module.name>
         <module.dir>${project.build.directory}/mods/aerogear~simplepush~${project.version}</module.dir>
-        <vertx.version>2.0.1-final</vertx.version>
     </properties>
 
     <dependencies>
@@ -59,7 +57,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-platform</artifactId>
-            <version>${vertx.version}</version>
+            <version>${version.io.vertx}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -68,7 +66,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -92,6 +89,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!-- Inherits version 3.0 from org.jboss:jboss-parent:10 pom.xml -->
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -100,6 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <!-- Inherits version 2.4 from org.jboss:jboss-parent:10 pom.xml -->
                 <configuration>
                     <outputDirectory>${module.dir}/lib</outputDirectory>
                 </configuration>
@@ -107,6 +106,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <!-- Inherits version 2.6 from org.jboss:jboss-parent:10 pom.xml -->
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -142,6 +142,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <!-- Inherits version 2.6 from org.jboss:jboss-parent:10 pom.xml -->
                 <executions>
                     <execution>
                         <id>copy-mod-json</id>
@@ -172,7 +173,7 @@
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
+                    <version>${version.org.eclipse.m2e}</version>
                     <configuration>
                         <lifecycleMappingMetadata>
                             <pluginExecutions>
