--- a/wildfly-module/pom.xml
+++ b/wildfly-module/pom.xml
@@ -37,13 +37,6 @@
     </licenses>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.jboss.as>7.1.1.Final</version.jboss.as>
-        <version.commons.http.core>4.2.4</version.commons.http.core>
-        <version.commons.http>4.2.5</version.commons.http>
-        <version.commons.pool>1.5.5</version.commons.pool>
-        <version.commons.io>2.0.1</version.commons.io>
-        <version.commons.logging>1.1.1</version.commons.logging>
         <module.name>org.jboss.aerogear.simplepush</module.name>
         <module.dir>${project.build.directory}/module/org/jboss/aerogear/simplepush/main</module.dir>
         <include.libs>aerogear-simplepush-datastore-in-memory</include.libs>
@@ -109,7 +102,7 @@
         <dependency>
             <groupId>org.jboss.modules</groupId>
             <artifactId>jboss-modules</artifactId>
-            <version>1.1.1.GA</version>
+            <version>${version.org.jboss.modules}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -137,7 +130,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.18</version>
+            <version>${version.mysql}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -158,13 +151,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.2.3.Final</version>
+            <version>${version.org.hibernate}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.172</version>
+            <version>${version.com.h2database}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -174,6 +167,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!-- Inherits version 3.0 from org.jboss:jboss-parent:10 pom.xml -->
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -182,6 +176,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <!-- Inherits version 2.4 from org.jboss:jboss-parent:10 pom.xml -->
                 <configuration>
                     <outputDirectory>${module.dir}</outputDirectory>
                 </configuration>
@@ -189,6 +184,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <!-- Inherits version 2.6 from org.jboss:jboss-parent:10 pom.xml -->
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -234,6 +230,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <!-- Inherits version 2.6 from org.jboss:jboss-parent:10 pom.xml -->
                 <executions>
                     <execution>
                         <id>copy-module-xml</id>
@@ -264,7 +261,7 @@
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
+                    <version>${version.org.eclipse.m2e}</version>
                     <configuration>
                         <lifecycleMappingMetadata>
                             <pluginExecutions>
