Fixing buffer leaks in SockJS transports.
[https://issues.jboss.org/browse/AGSMPLPUSH-51]

--- a/netty-codec-sockjs/pom.xml
+++ b/netty-codec-sockjs/pom.xml
@@ -107,6 +107,13 @@
                         <!-- Port -->
                         <argument>8081</argument>
                     </arguments>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>io.netty.leakDetectionLevel</key>
+                            <!-- disabled, simple, advanced, or paranoid -->
+                            <value>disabled</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
         </plugins>
