--- a/netty-codec-sockjs/pom.xml
+++ b/netty-codec-sockjs/pom.xml
@@ -40,19 +40,19 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec</artifactId>
-            <version>${version.io.netty}</version>
+            <version>${netty.version}</version>
         </dependency>
   
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
-            <version>${version.io.netty}</version>
+            <version>${netty.version}</version>
         </dependency>
   
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
-            <version>${version.io.netty}</version>
+            <version>${netty.version}</version>
         </dependency>
   
         <dependency>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
-            <version>${version.org.jmock}</version>
+            <version>${jmock.version}</version>
             <scope>test</scope>
         </dependency>
   
