--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-platform</artifactId>
-            <version>${version.io.vertx}</version>
+            <version>${vertx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
