--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -13,6 +13,7 @@ simplepush.server.endpoint-prefix=The prefix for the the notification endpoint u
 simplepush.server.endpoint-tls=Determines is transport layer security should be used for notification endpoints (https)
 simplepush.server.endpoint-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
 simplepush.server.endpoint-socket-binding=A reference to an outbound-socket-binding
+simplepush.server.notifier-max-threads=The maxium number of threads that will be used for handling notifications.
 simplepush.server.sockjs-prefix=The prefix/name, of the SockJS service
 simplepush.server.sockjs-cookies-needed=This is used by some load balancers to enable session stickyness
 simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used by the 'iframe' protocol and the url is replaced in the script returned to the client 
