Adding Docker image to enable running the complete test suite.
Motivation:
Currently running all the tests in the project requires a local
installation of CouchDB and Redis. Providing a Docker image with these
databases pre-installed might help others to also run the complete test
suite.

--- a/server-netty/src/main/resources/simplepush-config.json
+++ b/server-netty/src/main/resources/simplepush-config.json
@@ -1,6 +1,7 @@
 {
-    "host": "localhost",
+    "host": "0.0.0.0",
     "port": 7777,
+    "endpoint-host": "localhost",
     "password": "ChangeMe!!!!",
     "datastore": { "in-memory": {} }
 }
