--- a/server-netty/src/main/resources/simplelogger.properties
+++ b/server-netty/src/main/resources/simplelogger.properties
@@ -1,2 +1,2 @@
-org.slf4j.simpleLogger.log.org.jboss.aerogear.simplepush.server.netty.standalone=DEBUG
-org.slf4j.simpleLogger.defaultLogLevel=ERROR
+org.slf4j.simpleLogger.log.org.jboss.aerogear.simplepush.server=debug
+org.slf4j.simpleLogger.defaultLogLevel=info
