--- a/common/pom.xml
+++ b/common/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>aerogear-crypto</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert</artifactId>
             <scope>test</scope>
