--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <commons.io.version>2.0.1</commons.io.version>
         <commons.logging.version>1.1.1</commons.logging.version>
         <commons.pool.version>1.5.5</commons.pool.version>
+        <commons.codec.version>1.6</commons.codec.version>
         <ektorp.version>1.4.1</ektorp.version>
         <version.exec-maven-plugin>1.2</version.exec-maven-plugin>
         <vertx.version>2.0.1-final</vertx.version>
@@ -212,6 +213,11 @@
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
