--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.aerogear</groupId>
         <artifactId>simplepush-server-parent</artifactId>
-        <version>0.12.0-SNAPSHOT</version>
+        <version>0.12.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>aerogear-simplepush-server-api</artifactId>
