Update SockJS CDN URL as is being retired.
Motivation:
The SockJS CDN will retire on 1 Dec 2014 [1] and we need up update our
netty-codec-sockjs and our documentation to reflect this.

JIRA: https://issues.jboss.org/browse/AGSMPLPUSH-68

[1] https://github.com/sockjs/sockjs-client/issues/198

--- a/server-netty/src/main/resources/simplepush-couchdb-config.json
+++ b/server-netty/src/main/resources/simplepush-couchdb-config.json
@@ -10,7 +10,7 @@
     "ack-interval": "60000",
     "sockjs-prefix": "/simplepush",
     "sockjs-cookies-needed": "true",
-    "sockjs-url": "http://cdn.sockjs.org/sockjs-0.3.4.min.js",
+    "sockjs-url": "http://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js",
     "sockjs-session-timeout": "5000",
     "sockjs-heartbeat-interval": 25000,
     "sockjs-max-streaming-bytes-size": 65356,
