--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.aerogear</groupId>
         <artifactId>simplepush-server-parent</artifactId>
-        <version>0.12.1-SNAPSHOT</version>
+        <version>0.12.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>aerogear-simplepush-protocol</artifactId>
