--- a/datastores/in-memory/pom.xml
+++ b/datastores/in-memory/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.aerogear</groupId>
         <artifactId>simplepush-datastores-parent</artifactId>
-        <version>0.12.1</version>
+        <version>0.12.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>aerogear-simplepush-datastore-in-memory</artifactId>
